fix layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  scroll-padding-top: 60px;
+  /* scroll-padding-top: 60px; */
 }
 
 :root {
@@ -20,11 +19,11 @@ body {
   --dark-yellow: #d2b95c;
   background-color: var(--deep-blue);
 
-  font-synthesis: none;
+  /* font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; */
 }
 
 /* a {
@@ -66,7 +65,9 @@ button:focus-visible {
 .sticky-section {
   position: sticky;
   top: 0;
-  
+  /* height: calc(100vh - 60px);  max-width: 100%; */
+  /* overflow-y: auto;  */
+
 }
 
 .popup-box {
@@ -111,6 +112,7 @@ button:focus-visible {
 }
 
 @media (max-width: 768px) {
+
   #header {
     padding-left: 0;
   }
@@ -120,12 +122,43 @@ button:focus-visible {
   #header--h2 {
     font-size: 1.7rem;
   }
+
+  #about { 
+    /* margin-bottom: 300px; */
+    /* z-index: 300; */
+    /* padding-bottom: 300px; */
+    padding-bottom: 4rem;  
+  } 
+   .experience-section { 
+    /* margin-top: 100px; */
+    /* margin-bottom: 800px; */
+    /* z-index: 0; */
+    /* height: 100%; */
+    margin-top: 8rem;
+   }
+  
+
+  .sticky-section {
+    position: sticky;
+  top: 0;
+  height: calc(100vh - 60px); /* Adjust the height value as desired */
+  max-width: 100%;
+  overflow-y: auto; 
+  }
+
+}
+
+@media (max-width: 1800px) {
+
   #about {
-    order: 2;
-    margin-bottom: 300px;
+    padding-bottom: 300px;
   }
 
   #experience {
-    order: 1;
+    padding-bottom: 500px;
+  }
+
+  #portfolio {
+    padding-bottom: 400px;
   }
 }
